--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     ]
   },
   "devDependencies": {
-    "jest-cli": "^0.2.1"
+    "jest-cli": "^0.2.1",
+    "jsx-loader": "^0.13.2",
+    "webpack": "^1.11.0"
   }
 }
