--- a/package.json
+++ b/package.json
@@ -32,13 +32,8 @@
     ]
   },
   "peerDependencies": {
-    "react": ">=0.12.0 <1.0.0"
-  },
-  "dependencies": {
-    "react": "*",
-    "react-tools": "*",
-    "browserify": "^8.0.3",
-    "reactify": "^0.17.1"
+    "react": ">0.14.0",
+    "react-dom": ">0.14.0"
   },
   "jest": {
     "scriptPreprocessor": "preprocessor.js",
